--- a/style.css
+++ b/style.css
@@ -359,3 +359,176 @@ body {
   height: auto;
  
 }
+
+
+@media screen and (max-width: 480px) {
+  .salute-gif {
+    max-width: 80%;
+    height: auto;
+    margin-bottom: 20px;
+}
+}
+
+
+
+
+
+@media screen and (max-width: 450px) {
+  .salute-gif {
+    max-width: 120%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.logo-container {
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 5;
+}
+
+.logo {
+  max-width: 160px;
+  height: auto;
+ 
+}
+
+.resizable {
+  resize: both;
+  overflow: auto;
+  max-width: 150px;
+  max-height: 300px;
+  transition: filter 0.3s ease;
+}
+
+.marching-lineup {
+padding: 0px;
+}
+
+.logo-container {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 5;
+}
+
+.overlay-st {
+  max-width: 75%;
+}
+
+.overlay-logo {
+  max-width: 55%;
+}
+
+}
+
+
+
+
+@media screen and (max-width: 400px) {
+  .salute-gif {
+    max-width: 75%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+
+
+.resizable {
+  resize: both;
+  overflow: auto;
+  max-width: 150px;
+  max-height: 300px;
+  transition: filter 0.3s ease;
+}
+
+.marching-lineup {
+padding: 0px;
+}
+
+.logo-container {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 5;
+}
+
+.overlay-st {
+  max-width: 65%;
+}
+
+.overlay-logo {
+  max-width: 45%;
+}
+
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+  .salute-gif {
+    max-width: 40%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.logo-container {
+  position: absolute;
+  top: 20px;
+  left: 60%;
+  transform: translateX(-50%);
+  z-index: 5;
+}
+
+.logo {
+  max-width: 160px;
+  height: auto;
+ top: 50px;
+}
+
+.starwarsday {
+  max-width: 200px; /* Adjust the value as needed */
+  height: auto;
+  animation: starwarsday-animation 2s infinite;
+}
+
+.starwarsday-container {
+  max-width: 200px; /* Adjust the value as needed */
+  height: auto;
+  animation: starwarsday-animation 2s infinite;
+}
+
+.salute-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 120px;
+}
+
+.resizable {
+  resize: both;
+  overflow: auto;
+  max-width: 150px;
+  max-height: 300px;
+  transition: filter 0.3s ease;
+}
+
+.marching-lineup {
+padding: 0px;
+}
+
+
+
+.overlay-st {
+  max-width: 15%;
+}
+
+.overlay-logo {
+  max-width: 15%;
+}
+
+}
