--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 2;
+    z-index: 1;
   }
   
   .salute-container {
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 0px;
-    z-index: 9999999;
+    margin-top: 55px;
   }
   
   .salute-gif {
@@ -294,7 +294,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  z-index: 1;
+  z-index: 0;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -320,11 +320,11 @@ body {
 
 .image-text {
   position: absolute;
-  top: -4%;
+  top: -5%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bold;
   text-align: center;
   opacity: 0;
@@ -346,6 +346,66 @@ body {
 .logo {
   max-width: 300px;
   height: auto;
+}
+
+.slider-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 800px; /* Adjust the height as needed */
+}
+
+.slider-content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.content {
+  flex: 0 0 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.second-content {
+  /* Styles specific to the second content section */
+  display: none;
+}
+
+.slider-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.prev-button,
+.next-button {
+  background: none;
+  border: none;
+  font-size: 48px;
+  cursor: pointer;
+  padding: 10px;
+  color: white;
+  transition: transform 0.3s ease;
+  z-index: 9999;
+}
+
+.prev-button:hover,
+.next-button:hover {
+  transform: scale(1.2);
+  z-index: 9999;
+}
+
+.slider-content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease;
 }
 
 
