--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 1;
+    z-index: 3;
   }
   
   .salute-container {
@@ -267,7 +267,7 @@ body {
    
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 10;
 }
 
 #play-button {
@@ -314,7 +314,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  z-index: 0;
+  z-index: 1;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -496,7 +496,7 @@ body {
 .salute-container p2 {
   color: #FFE81F;
   font-size: 12px;
-  margin-top: 10px;
+  margin-top: 20px;
   font-family: 'Press Start 2P', cursive;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   word-break: break-all;
@@ -513,7 +513,9 @@ body {
   .image-container-bot {
     padding: 10px;
   }
-
+  .content {
+    top: 25%;
+  }
 
   .gif-container {
     position: relative;
@@ -532,8 +534,15 @@ body {
   
 }
 .salute-container p {
-  font-size: 8px;
+  font-size: 12px;
 }
+
+.salute-container p2 {
+ 
+  font-size: 10px;
+
+}
+
 .salute-gif {
   max-width: 25%;
   margin-bottom: 1px;
@@ -544,7 +553,7 @@ body {
 }
 
 .join-button {
-  font-size: 12px;
+  font-size: 10px;
   margin-top: 5px;
 }
 
